changes to javascipt and numberb-button placement

--- a/casio_calculator.html
+++ b/casio_calculator.html
@@ -364,7 +364,7 @@
                             <div class="calculator_buttons relative px-5 pt-3">
                                 <div class="calculator__buttons_inner h-auto text-white grid grid-cols-5  m-autp text-xs">
     
-                                    <div class="number-button flex flex-col items-center calculator__button_small mx-auto w-11 bg-gray-500 justify-between">
+                                    <div class="number-button cursor-pointer flex flex-col items-center calculator__button_small mx-auto w-11 bg-gray-500 justify-between">
                                         <span class="ml-auto mr-auto flex items-center">
                                             <button class="p-1">
                                                 7
@@ -372,7 +372,7 @@
                                         </span>
                                     </div>
     
-                                    <div class="number-button flex flex-col items-center calculator__button_small mx-auto w-11 bg-gray-500 justify-center">
+                                    <div class="number-button cursor-pointer flex flex-col items-center calculator__button_small mx-auto w-11 bg-gray-500 justify-center">
                                         <span class="ml-auto mr-auto flex items-center">
                                             <button class="p-1">
                                                 8
