--- a/casio_calculator.html
+++ b/casio_calculator.html
@@ -158,7 +158,7 @@
                                 
                              
 
-                                <div class="flex flex-col items-center justify-between h-16">
+                                <div class="flex reload-button flex-col items-center justify-between h-16">
                                     <span class="flex flex-col">
                                         ON
                                         <button class="right-buttons rounded-full bg-purple-400 mx-auto p-5"></button>
@@ -387,16 +387,16 @@
                                             </button>
                                         </span>
                                     </div>
-                                    <div class="flex flex-col items-center calculator__button_small text-black mx-auto w-11 bg-orange-500 justify-center">
+                                    <div class="flex flex-col delete-button cursor-pointer items-center calculator__button_small text-black mx-auto w-11 bg-orange-500 justify-center">
                                         <span class="ml-auto mr-auto flex items-center">
-                                            <button class="p-1 delete-button">
+                                            <button class="p-1 ">
                                                 DEL
                                             </button>
                                         </span>
                                     </div>
-                                    <div class="flex flex-col items-center calculator__button_small text-black mx-auto w-11 bg-orange-500 justify-center">
+                                    <div class="flex flex-col items-center all-clear-button cursor-pointer calculator__button_small text-black mx-auto w-11 bg-orange-500 justify-center">
                                         <span class="ml-auto mr-auto flex items-center">
-                                            <button class="p-1 all-clear-button">
+                                            <button class="p-1 ">
                                                 AC
                                             </button>
                                         </span>
